--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Bootils - Basic utilities fo PHP developers",
     "keywords": ["bootils", "php", "utils", "basic"],
     "type": "library",
+    "version": "2.0",
     "homepage": "https://github.com/oriolet/bootils",
     "license": "MIT",
     "authors": [
@@ -18,6 +19,7 @@
     "require": {
         "php": ">=5.2.0"
     },
+    "minimum-stability": "stable",
     "autoload": {
         "files": ["Bootils/Bootils.php"]
     }
