--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,6 @@
         "php": ">=5.2.0"
     },
     "autoload": {
-        "files": ["Bootils/Bootils.php"]
+        "files": ["bootils/Bootils.php"]
     }
 }
