--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "oriolet/bootils",
     "type": "library",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "Bootils - Basic utilities fo PHP developers",
     "keywords": ["bootils", "php", "utils", "basic"],
     "homepage": "http://oriolet.github.io/Bootils/",
@@ -20,6 +20,6 @@
         "php": ">=5.2.0"
     },
     "autoload": {
-        "files": ["bootils/Bootils.php"]
+        "files": ["Bootils.php"]
     }
 }
