--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "oriolet/bootils",
     "type": "library",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "Bootils - Basic utilities fo PHP developers",
     "keywords": ["bootils", "php", "utils", "basic"],
     "homepage": "http://oriolet.github.io/Bootils/",
@@ -21,5 +21,10 @@
     },
     "autoload": {
         "files": ["Bootils.php"]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.4-stable"
+        }
     }
 }
