--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "master": "1.0.4-dev"
+            "dev-master": "1.0.4-dev"
         }
     }
 }
