--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "oriolet/bootils",
     "type": "library",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Bootils - Basic utilities fo PHP developers",
     "keywords": ["bootils", "php", "utils", "basic"],
     "homepage": "http://oriolet.github.io/Bootils/",
@@ -24,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.0-dev"
+            "dev-master": "1.0.x-dev"
         }
     }
 }
